c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_parse/struct_decl_kw_wrong_order.c
// struct keyword must come before tag
s struct x { int a; };

int main(void) {
    return 0;
}